# BLDCGazeboROS2

./: Basics.md  CMakeLists.txt  README.md  package.xml
bldc_motor_gui/: package.xml  setup.cfg  setup.py
bldc_motor_gui/bldc_motor_gui/: gui.py
launch/: bldc_bridge.launch.py  bldc_world.launch.py  sim_with_gui.launch.py
models/bldc_motor/: model.config  model.sdf
models/bldc_motor/meshes/: rotor.stl  stator.stl
models/bldc_motor/step/: planet v3.step
models/install/: local_setup.sh  setup.sh
models/log/: latest_build
models/stl/: planet v3 - Bile_X2_015F_X0_en1-1.STL
scripts/: gui.py
src/: bldc_motor_plugin.cpp
worlds/: bldc_world.sdf
