<package format="3">
  <name>bldc_gz_sim</name>
  <version>0.0.0</version>
  <description>BLDC motor simulation plugin for Gazebo and ROS 2</description>
  <maintainer email="emrec@todo.todo">emrec</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_gz_sim</depend>

  <build_depend>gz-sim8</build_depend>
  <exec_depend>gz-sim8</exec_depend>

  <build_depend>gz-math7</build_depend>
  <exec_depend>gz-math7</exec_depend>

  <build_depend>gz-common5</build_depend>
  <exec_depend>gz-common5</exec_depend>

  <build_depend>gz-transport13</build_depend>
  <exec_depend>gz-transport13</exec_depend>

  <build_depend>gz-plugin2</build_depend>
  <exec_depend>gz-plugin2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
