<?xml version="1.0"?>
<package format="3">
  <name>bldc_gz_sim</name>
  <version>0.0.1</version>
  <description>BLDC motor simulation plugin for Gazebo and ROS 2</description>
  <maintainer email="emrec@todo.todo">emrec</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ ROS 2 dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Gazebo dependencies -->
  <build_depend>gz-sim8</build_depend>
  <exec_depend>gz-sim8</exec_depend>

  <build_depend>gz-math7</build_depend>
  <exec_depend>gz-math7</exec_depend>

  <build_depend>gz-common5</build_depend>
  <exec_depend>gz-common5</exec_depend>

  <build_depend>gz-transport13</build_depend>
  <exec_depend>gz-transport13</exec_depend>

  <build_depend>gz-plugin2</build_depend>
  <exec_depend>gz-plugin2</exec_depend>

  <!-- ROS-Gazebo Integration -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- Python GUI runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-pyqtgraph</exec_depend>

  <!-- Tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
